syntax = "proto3";

package auth;

import "google/protobuf/empty.proto";
// import "google/protobuf/any.proto";

import "internal/common/service_error.proto";

option go_package = "github.com/netholedev/triptych/internal/auth";

service AuthService {
  rpc Register (RegisterRequest) returns (TokenResponse) {}
  rpc Login (LoginRequest) returns (TokenResponse) {}
  rpc Profile (google.protobuf.Empty) returns (ProfileResponse) {}
}

message RegisterRequest {
	string first_name = 1;
	string last_name = 2;
	string email = 3;
	string password = 4;
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message ProfileResponse {
  string email = 1;
  string first_name = 2;
  string last_name = 3;
}

message TokenResult {
  string token = 1;
  string refresh_token = 2;
}

message TokenResponse {
  bool Sucsess = 1;
  common.errors.ServiceError errors = 2;
}