syntax = "proto3";

package users;

option go_package = "github.com/netholedev/triptych/internal/users";

service UsersService {}
